--- a/app/src/main/res/layout/list_menu.xml
+++ b/app/src/main/res/layout/list_menu.xml
@@ -17,11 +17,12 @@
         android:padding="8dp"
         android:orientation="vertical">
         <ImageView
+            android:id="@+id/imagehome"
             android:layout_width="110dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
             android:layout_margin="8dp"
-            android:background="@drawable/love"/>
+            android:src="@drawable/love"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
